[package]
name = "bevy_remote"
version = "0.12.0"
edition = "2021"
description = "Provides remote inspection capabilities for Bevy Engine via the BRP (Bevy Remote Protocol)"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
http = ["dep:rouille"]

[dependencies]
bevy_app = { path = "../bevy_app", version = "0.12.0" }
bevy_asset = { path = "../bevy_asset", version = "0.12.0" }
bevy_utils = { path = "../bevy_utils", version = "0.12.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.12.0" }
bevy_reflect = { path = "../bevy_reflect", version = "0.12.0" }
bevy_log = { path = "../bevy_log", version = "0.12.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8.0"
json5 = "0.4.1"
crossbeam-channel = "0.5.0"
rouille = { version = "3.6.2", optional = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[lints]
workspace = true
